--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 @import '_config.scss';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
+}
+
 body {
   font-size: em($font-size__base);
   -webkit-font-smoothing: antialiased;
