--- a/src/scss/Moon.scss
+++ b/src/scss/Moon.scss
@@ -1,7 +1,7 @@
 @import '../_config.scss';
 
 .container-moon {
-  background-image: url('./background-destination-desktop.jpg');
+  background: url('./background-destination-desktop.jpg') no-repeat center /cover;
   height: 100%;
   width: 100%;
   color: $white;
@@ -15,8 +15,17 @@
     font-family: $font-family__secondary;
     letter-spacing: em(4.75px);
     justify-content: flex-start;
+     [aria-hidden='true'] {
+      opacity: 0.7;
+      display: inline;
+      align-content: center;
+      font-size: em(16px);
+      margin: 1.2em 0.5em;
+      font-weight: 700;
+      color: $white;    }
     h5 {
-      margin: 0.5em 0;    }
+      margin: 1.5em 0;
+      font-family: $font-family__primary;   }
 }
 
 
@@ -24,6 +33,7 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-column-gap: 1em;
+  padding-block: 1.5em;
   .planetImg {
     width: 100%;
     height: 100%;
