--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -5,17 +5,21 @@
   display: flex;
   justify-content: space-between;
   color: $white;
-  -webkit-backdrop-filter: blur(8px);
-  -moz-backdrop-filter: blur(8px);
   height: 25%;
   .navbar-brand img {
     width: 25%;
     margin: 0.6em 4em;
     height: 50%;    }
   .navbar-parent {
-    background: transparent;  }
+    margin: 0.5em;
+    opacity: 1;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(8px);
+    -moz-backdrop-filter: blur(1rem);
+    background: transparent;
+    }
   .navbar-link {
-    margin: auto 4em;
+    padding-block-start: 1em;
     ul {
       font-size: em(16px);
       letter-spacing: em(2.7px);
@@ -29,13 +33,12 @@
       color: $white;
       cursor: pointer;
       text-decoration: none; }
-    a::before {
-      content: '00';
+    a > [aria-hidden='true'] {
       opacity: 0.7;
       display: inline;
       font-size: em(16px);
-      margin: 0.5em 0.3em;
-      font-weight: 600;
+      margin-inline-end: 0.75em;
+      font-weight: 700;
       color: $white;   }
     a::after {
       content: '';
@@ -54,13 +57,11 @@
 /*media queries*/
 
 @media (min-width: $laptop-sm) {
-  .navbar-link {
-    width: 55%;  }
+
 }
 
 @media (min-width: $laptop-md) {
-  .navbar-link {
-    width: 47%;  }
+
 }
 
 
