--- a/src/scss/Moon.scss
+++ b/src/scss/Moon.scss
@@ -35,12 +35,15 @@
   grid-column-gap: 1em;
   padding-block: 1.5em;
   .planetImg {
-    width: 100%;
+    width: 100%; 
+    grid-column: 1/2;
+    grid-row: 1/3;
     height: 100%;
   }
   .planetInfo {
     display: block;  }
   .navbar-moon {
+    grid-column: 2/3;
     margin: 0.2em 0;
   ul {
     font-size: em(16px);
