--- a/src/scss/Moon.scss
+++ b/src/scss/Moon.scss
@@ -8,9 +8,8 @@
 }
   .ez {
     display: flex;
-    height: 20%;
-    margin: 0.5em 1em;
-    font-size: em(20px);
+    margin-inline:1em;
+    font-size: em(32px);
     text-transform: uppercase;
     font-family: $font-family__secondary;
     letter-spacing: em(4.75px);
@@ -19,12 +18,12 @@
       opacity: 0.7;
       display: inline;
       align-content: center;
-      font-size: em(16px);
-      margin: 1.2em 0.5em;
+      font-size: em(32px);
+      margin: 0.6em 0.5em;
       font-weight: 700;
       color: $white;    }
     h5 {
-      margin: 1.5em 0;
+      margin: 1em 0;
       font-family: $font-family__primary;   }
 }
 
@@ -33,20 +32,22 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-column-gap: 1em;
-  padding-block: 1.5em;
+  width: 95%;
+  align-items: center;
+  // padding-block: 1em;
+  margin-inline: auto;
   .planetImg {
-    width: 100%;
-    height: 100%;
-    grid-column: 1/3;
+    width: 86%;
+    height: auto;
+    grid-column: 1/2;
+    img {
+      width: 100%;    }
   }
-  .planetInfo {
-    display: block;
-    grid-column: 2/3; }
   .navbar-moon {
     grid-column: 2/3;
     margin: 0.2em 0;
   ul {
-    font-size: em(16px);
+    font-size: em(32px);
     letter-spacing: em(2.7px);
     display: flex;
     padding: 0;
@@ -71,11 +72,11 @@
   }
 }
 
-.details {
-  padding: 0.2em;
+.planetInfo {
+  // padding: 0.2em;
   text-align: left;
   h2 {
-    font-size: em(100px);
+    font-size: em(160px);
     font-family: $font-family__primary;
     text-transform: uppercase;
     margin: 0;  }
@@ -83,19 +84,22 @@
     font-family: $font-family__secondary;
     line-height: em(28px);
     color: $tropicalblue;
-    width: 70%; }
+    width: 80%; }
   .avg-time {
     display: block;
     text-transform: uppercase;
     border-top: 1px solid $tropicalblue;
+    width: 80%;
+    margin-block: 1em;
     .distance, .time {
-      display: flex;  }
+      display: flex;
+      margin-block: 0.5em;  }
     .distance p{
-      font-size: em(14px);
+      font-size: em(24px);
       letter-spacing: em(2.35px);
       font-family: $font-family__primary;    }
     .time p {
-      font-size: em(28px);
+      font-size: em(32px);
       margin: 0;
       font-family: $font-family__primary;
       color: $white;  }
