--- a/src/scss/crew.scss
+++ b/src/scss/crew.scss
@@ -2,14 +2,13 @@
 
 .container-crew {
   background: url('./background-crew-desktop.jpg') no-repeat center /cover;
-  height: auto;
+  height: 100vh;
   width: 100%;
   color: $white;
   .ez {
     display: flex;
-    height: 20%;
-    margin: 1em;
-    font-size: em(20px);
+    margin-inline:1em;
+    font-size: em(32px);
     text-transform: uppercase;
     font-family: $font-family__secondary;
     letter-spacing: em(4.75px);
@@ -18,27 +17,27 @@
       opacity: 0.7;
       display: inline;
       align-content: center;
-      font-size: em(16px);
-      margin: 0.3em 0.5em;
+      font-size: em(32px);
+      margin: 0.6em 0.5em;
       font-weight: 700;
-      color: $white;
-    }
+      color: $white;    }
     h5 {
-      margin: 0.5em 0;
-      font-family: $font-family__secondary;  }
+      margin: 1em 0;
+      font-family: $font-family__primary;   }
   }
   .crew_body {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-gap: 1em;
+    align-items: center;
     margin: 0.5em 1em;
     padding-inline-start: 0.5em;
-    padding-block: 5em;
+    // padding-block: 5em;
     .commander-info {
-      display: block;
+      grid-column: 1/2;
       [aria-hidden='true'] > h5 {
         opacity: 0.7;
-        font-size: em(28px);
+        font-size: em(64px);
         text-transform: uppercase;
         font-family: $font-family__primary;
         margin: 0.3em 0;
@@ -50,15 +49,22 @@
         text-transform: uppercase;
         font-family: $font-family__secondary;      }
       p {
-        font-size: em(16px);
+        font-size: em(32px);
         color: $tropicalblue;
         letter-spacing: em(2.7px);
         font-family: $font-family__secondary;      }
     }
+  .commander-image {
+    width: 60%;
+    height: auto;
+    grid-column: 2/3;
+    img{
+      margin: 0 5em;
+      width: 100%;  } }
   }
   .carousel {
-    display: flex;
-    justify-content: flex-start;
+    // justify-content: flex-start;
+    grid-column: 1/2;
     margin-inline: 1em;
     padding: 0.5em;
     a {
@@ -69,5 +75,13 @@
         color: #000;
         border-radius: 10px;
     }
+  }
+}
+
+//media queries
+
+@media (min-width: $laptop-md) {
+  .commander-image {
+    img {margin: 0 10em;}
   }
 }
