--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,7 +1,7 @@
 @import '../_config.scss';
 .container {
   background: url('./background-home-desktop.jpg') no-repeat center /cover;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   color: $white;
 }
@@ -9,24 +9,26 @@
 .home-content {
   display: inline-grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-  padding: 3.4em 0;
+  align-items: center;
+  padding-block: 4em;
   .home-info {
     display: block;
     padding: 0.1em;
     margin: 0.5em 4em;
     h5 {
-      font-size: em(28px);
+      font-size: em(48px);
       text-transform: uppercase;
       margin: 0.5em 0;
       font-family: $font-family__secondary;
       letter-spacing: em(4.75px);    }
     h2 {
-      font-size: em(100px);
+      font-size: em(224px);
       text-transform: uppercase;
-      margin: 0.5em 0;
+      margin: 0.2em 0;
       font-family: $font-family__primary;    }
     p {
       margin: 0.5em 0;
+      font-size: em(32px);
       font-family: $font-family__secondary;    }
   }
   .btns {
@@ -35,7 +37,11 @@
     text-align: center;
     button{
       padding: 0.5em;
-      font-size: em(28px);
+      font-size: em(35px);
+      width: 50%;
+      height: 60%;
+      border-radius: 120px;
+      cursor: pointer;
       letter-spacing: em(1.75px);
       text-transform: uppercase;
       margin: 2.5em auto;   }
@@ -43,23 +49,9 @@
 }
 
 // media queries
-@media (min-width: $laptop-sm) {
-  .home-content {
-    h5 { font-size: em(18px); }
-    h2 { font-size: em(80px); }
-}
-
-  button {
-    width: 50%;
-    height: 60%;
-    border-radius: 120px;
-    cursor: pointer;
-  }
-}
 @media (min-width: $laptop-md) {
   button {
     width: 40%;
     height: 75%;
-    border-radius: 160px;
-  }
+    border-radius: 160px;  }
 }
