--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -2,14 +2,13 @@
 
 .navbar {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  align-items: center;
   color: $white;
-  height: 25%;
-  .navbar-brand img {
-    width: 25%;
-    margin: 0.6em 4em;
-    height: 50%;    }
+   img {
+    width: 7%;
+    margin-inline-start: 1.5em;   }
   .navbar-parent {
     margin: 0.5em;
     opacity: 1;
@@ -19,9 +18,9 @@
     background: transparent;
     }
   .navbar-link {
-    padding-block-start: 1em;
     ul {
-      font-size: em(16px);
+      padding-block-start: 1em;
+      font-size: em(24px);
       letter-spacing: em(2.7px);
       display: inline-flex;
       font-family: $font-family__secondary;   }
@@ -36,7 +35,7 @@
     a > [aria-hidden='true'] {
       opacity: 0.7;
       display: inline;
-      font-size: em(16px);
+      font-size: em(24px);
       margin-inline-end: 0.75em;
       font-weight: 700;
       color: $white;   }
@@ -49,17 +48,12 @@
     }
     a:hover:after {
       opacity: 1;
-      animation: hoverEffect ease-in 3s;
+      animation: hoverEffect ease-in 1s;
   }
 }
 
 
 /*media queries*/
-
-@media (min-width: $laptop-sm) {
-
-}
-
 @media (min-width: $laptop-md) {
 
 }
