--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -16,39 +16,66 @@
     padding: 0.1em;
     margin: 0.5em 4em;
     h5 {
-      font-size: em(48px);
+      font-size: em(29px);
       text-transform: uppercase;
+      color: $tropicalblue;
       margin: 0.5em 0;
       font-family: $font-family__secondary;
       letter-spacing: em(4.75px);    }
     h2 {
-      font-size: em(224px);
+      font-size: em(168px);
       text-transform: uppercase;
       margin: 0.2em 0;
       font-family: $font-family__primary;    }
     p {
       margin: 0.5em 0;
+      color: $tropicalblue;
       font-size: em(24px);
       font-family: $font-family__secondary;    }
   }
   .btns {
-    width: 100%;
-    height: 100%;
+    width: 40%;
+    height: 70%;
+    margin: 0 auto;
     text-align: center;
     button{
       padding: 0.5em;
       font-size: em(35px);
-      width: 50%;
-      height: 60%;
-      border-radius: 120px;
+      width: 100%;
+      height: 100%;
+      border-radius: 150px;
       cursor: pointer;
       letter-spacing: em(1.75px);
-      text-transform: uppercase;
-      margin: 2.5em auto;   }
+      text-transform: uppercase;   }
   }
 }
 
 // media queries
+@media (max-width: $mobile) {
+  .container {
+    background: url('./background-home-mobile.jpg') no-repeat center /cover !important;  
+    .home-content {
+      padding: 3em 0;
+      .home-info {
+        h5 {
+          font-size: em(48px) !important; }
+        h2 {
+          font-size: em(288px)  !important; }
+        p {
+            font-size: em(56px) !important; }
+      }
+      .btns {
+        width: 40%  !important;
+        height: 70% !important;
+        button {
+          width: 100%;
+          height: 100%;
+          font-size: em(50.4px) !important;        }
+      }
+    }
+  }
+}
+
 @media (max-width: $tablet) {
   .container {
     background: url('./background-home-tablet.jpg') no-repeat 0px -250px /cover;
@@ -62,19 +89,18 @@
         margin: 0 auto;
         h5 {
           font-size: em(24px);      }
-          h2 {
-            margin: 0;      }
-            p {
-              font-size: em(32px);      }
-            }
-            .btns {
-              grid-column: 1/ span 2;  
-              button {
-                width: 26%;
-                height: 80%;      }  }
-              }
-            }
+        h2 {
+          margin: 0;      }
+        p {
+          font-size: em(32px);      }
+      }
+        .btns {
+          grid-column: 1/ span 2;  
+          width: 25%;
+          height: 90%;       }
           }
+        }
+      }
             
             
 @media (max-width: $laptop-md) {
@@ -82,11 +108,7 @@
     max-width: 1440px;
     .home-info {
       h5 {
-        font-size: em(40px);     }     
-    }
-    .home-content{
-      button {
-        border-radius: 160px;  }
+        font-size: em(24px);     }     
     }
   }
 }
