--- a/src/scss/crew.scss
+++ b/src/scss/crew.scss
@@ -25,47 +25,66 @@
       margin: 1em 0;
       font-family: $font-family__primary;   }
   }
-  .crew_body {
+  .crew-body {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-gap: 1em;
+    grid-auto-flow: column;
     align-items: center;
-    margin: 0.5em 1em;
-    padding-inline-start: 0.5em;
-    // padding-block: 5em;
+    justify-items: center;
+    grid-template: repeat(3, 1fr);
+    // grid-template-areas: 
+    //             "a a b"
+    //             "a a b"
+    //             "c c b";
     .commander-info {
+      align-self: end;
+      width: 80%;
       grid-column: 1/2;
+      grid-row: 1/2;
+      // grid-area: a;
       [aria-hidden='true'] > h5 {
-        opacity: 0.7;
-        font-size: em(64px);
+        text-align: center; 
+        font-size: 32px;
+        line-height: 37px;
+        opacity: 0.5;
         text-transform: uppercase;
         font-family: $font-family__primary;
         margin: 0.3em 0;
-        font-weight: 700;
+        mix-blend-mode: normal;
+        letter-spacing: 0px;
+        text-align: left;
         color: $gray;       }
       h3 {
-        font-size: em(48px);
-        margin-block: 0.5em;
+        font-size: 56px;
+        line-height: 64px;
         text-transform: uppercase;
-        font-family: $font-family__secondary;      }
+        font-family: $font-family__primary;      }
       p {
-        font-size: em(24px);
+        font-size: 18px;
+        line-height: 32px;
+        font-family: 'Barlow';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 28px;
         color: $tropicalblue;
         letter-spacing: em(2.7px);
         font-family: $font-family__secondary;      }
     }
   .commander-image {
-    width: 50%;
-    height: auto;
+    // grid-area: b;
     grid-column: 2/3;
+    grid-row: 1/3;
+    width: 80%;
     img{
-      margin: 0 5em;
       width: 100%;  } }
   }
   .carousel {
+    // grid-area: c;
+    align-self: end;
+    justify-self: left;
+    padding-inline-start: 4em;
     grid-column: 1/2;
-    margin-inline: 1em;
-    padding: 0.5em;
+    grid-row: 2/ span 1;
     a {
       margin-inline-end: 0.5em;
       cursor: pointer;  }
@@ -78,7 +97,7 @@
 }
 
 //media queries
-@media (max-width: $mobile) {
+@media screen and (max-width: $mobile) {
   .container-crew {
     background: url('./background-crew-mobile.jpg') no-repeat center /cover;
     text-align: center;
@@ -90,52 +109,66 @@
       h5 {
         font-size: em(64px);       }
     }
-    .crew_body {
-      grid-template-columns: none;
-      grid-template-rows: repeat(3, minmax(0, auto)) !important;
+    .crew-body {
+      grid-template-rows: 1fr 0.2fr 1fr !important;
       .commander-image {
-        grid-row: 1/2 !important; 
-        width: 55% !important;     }
+        grid-column: 1/span 2 !important;
+        width: 50%;
+        grid-row: 1/2 !important;    }
       .commander-info {
+        grid-column: 1/ span 2 !important;
+        grid-row: 3/4;
         [aria-hidden='true'] > h5 {
           font-size: em(64px) !important;        } 
         h3 {
-          font-size: em(80px) !important;        }
+          font-size: 24px !important;
+          line-height: 28px !important;         }
         p {
-          font-size: em(64px) !important; 
-          width: 80% !important;
-          line-height: em(64.2px) !important;        }
+          font-size: 15px !important;
+          width: 100% !important;
+          line-height: 25px !important;       }
       }
     }
   }
 }
 
 
-@media (max-width: $tablet) {
+@media screen and (max-width: $tablet) {
   .container-crew {
     background: url('./background-crew-tablet.jpg') no-repeat center /cover;
-    .crew_body {
-      grid-template-rows: repeat(3, minmax(0, auto));
+    .crew-body {
+      grid-template-rows: 1fr 0.2fr 2fr;
+      justify-items: center;
       .commander-image {
-        grid-column: 1 / span 2;
-        grid-row: 3 / 4;
-        width: 27%;
-        margin: 0 auto;  
-        img { margin: 0 -1em;}    }
+        align-self: flex-start;
+        grid-column: 1/3;
+        grid-row: 3/4;
+        text-align: center;
+         width: 35%;
+        img { width: 100%;}
+           }
       .commander-info {
-        grid-column: 1 / span 2;
+        grid-column: 1/ span 2;
         margin: 0 auto;
         text-align: center;  
         [aria-hidden='true'] > h5 {
-          font-size: em(32px);        } 
+          font-size: 24px;
+          text-align: center;
+          line-height: 28px;      } 
+        h3 {
+          font-size: 40px;
+          line-height: 46px;        }
         p { 
          width: 70%; 
-         line-height: em(45px);
+         font-size: 16px;
+         line-height: 28px;
          margin: 0 auto; }   }
       .carousel {
-        grid-column: 1 / span 2;
-        grid-row: 2 / 3;
         margin: 0 auto;
+        align-self: center;
+        padding: 0;
+        grid-column: 1/span 2;
+        grid-row: 2/3;
       }
     }
   }
@@ -143,15 +176,15 @@
 
 
 @media (max-width: $laptop-md) {
-  .container-crew {
-    max-width: 1440px;
-  .commander-image {
-    img {margin: 0 10em;}
-  }
-  .carousel {
-    a {
-      font-size: em(32px);
-    }
-  }
-  }
+  // .container-crew {
+  //   max-width: 1440px;
+  // .commander-image {
+  //   img {margin: 0 10em;}
+  // }
+  // .carousel {
+  //   a {
+  //     font-size: em(32px);
+  //   }
+  // }
+  // }
 }
