--- a/src/scss/hamburger.scss
+++ b/src/scss/hamburger.scss
@@ -17,6 +17,9 @@
            width: 100%;
            height: 100%;       }
     }  
+    // .open {
+    //     display: block;
+    // }
     .menu {
         display: none;
         width: 70%;
