--- a/src/scss/technology.scss
+++ b/src/scss/technology.scss
@@ -27,21 +27,19 @@
     .technology-section {
       display: grid;
       justify-content: space-around;
-      grid-gap: 20px;
-      grid-template-columns: repeat(5, 1fr);
-      line-height: em(28px);
+      grid-template-columns: 0.5fr 2fr 1.5fr;
       padding: 1em 0;
       align-items: center;
+      column-gap: 1em;
       font-family: $font-family__secondary;
       .carousel {
-        display: flex;
-        grid-column: 1/2;
-        align-items: center;
+        display: inline-flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
         .icon {
           font-size: 5rem;      }   }
       .technology-info {
-        grid-column: 2/ span 2;
       h4 {
         text-transform: uppercase;
         font-size: em(20px);
@@ -56,19 +54,20 @@
       p {
         font-family: $font-family__secondary;
         color: #D0D6F9;
+        line-height: 32px;
         font-size: em(24px);      }
           }
       .technology-image {
-        grid-column: 4/ span 2;
-        width: 90%;
-      img {
-        width: 100%;      }   }
+        // width: auto;
+        // height: auto; 
+        img { width: 100%;}  }   
     }
 }
 
 
+
 //media query//
-@media (max-width: $mobile) {
+@media screen and (max-width: $mobile) {
   .container-tech {
     background: url('./background-technology-mobile.jpg') no-repeat center /cover;
     text-align: center;
@@ -81,50 +80,89 @@
         font-size: em(64px);       }
     }
     .technology-section {
-      grid-template-columns: none;
-      .technology-info {
-        width: 80% !important;
-        h4 {
-          font-size: em(64px) !important; 
-          margin-block-end: 1.5em;       } 
-        h3 {
-          font-size: em(128px) !important;        }
-        p {
-          font-size: em(64px) !important; 
-          margin-block-start: 2em;
-          line-height: em(64.2px) !important;        }
-      }
-      .technology-image { width: 100% !important;}
+      grid-template-columns: 1fr;
+      grid-template-areas:   "img img"   
+                             "caro caro"    
+                             "info info";
+      row-gap: 0.5em;
+      .carousel { 
+        grid-area: caro;
+        flex-direction: row;
+        margin: 0 auto;  
+        .icon { font-size: 3rem;}    }
+        .technology-image {  
+          grid-area: img;
+          width: auto;  
+          margin: 0 auto;    }
+        .technology-info {
+        width: 70%; 
+        grid-area: info;    
+        text-align: center;
+        margin: 0 auto;   
+        h4 { 
+          font-size: 14px !important;
+          line-height: 17px !important;
+          letter-spacing: 2.362499952316284px;          }
+        h3 { 
+          font-size: 24px !important;
+          line-height: 28px!important;
+          letter-spacing: 0px;        }
+        p {  
+          font-size: 15px;
+          font-weight: 400;
+          line-height: 25px;
+          letter-spacing: 0px;
+          text-align: center;
+  
+            }   }
     }
-  }
+}
 }
 
 
-@media (max-width: $tablet) {
+@media screen and (max-width: $tablet) {
   .container-tech {
     background: url('./background-technology-tablet.jpg') no-repeat center /cover;
     .technology-section {
-      grid-template-rows: repeat(3, minmax(0,auto));
-      .technology-image {
-        grid-column: 1 / span 5;
-        grid-row: 1/2;  
-        width: 90%;
-        margin: 0 auto;    }
+      grid-template-columns: 1fr;
+      grid-template-areas:   "img img"   
+                             "caro caro"    
+                             "info info";
+      row-gap: 0.5em;
       .carousel { 
-        grid-column: 1 / span 5;
+        grid-area: caro;
         flex-direction: row;
-        grid-row: 2/3;
         margin: 0 auto;  
         .icon { font-size: 3rem;}    }
-      .technology-info {
-        grid-column: 1 / span 5;
-        width: 50%;
+        .technology-image {  
+          // width: 90%;
+          grid-area: img;
+          width: auto;  
+          margin: 0 auto;    }
+        .technology-info {
+        width: 70%; 
+        grid-area: info;    
         text-align: center;
-        grid-row: 3/4;
         margin: 0 auto;   
-        p { font-size: em(32px)}   }
+        h4 { 
+          font-size: 16px;
+          letter-spacing: 2.7px;
+          line-height: 19.2px;      }
+        h3 { 
+          font-size: 40px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 46px;    }
+        p { 
+          font-style: normal;
+          font-size: 16px;
+          line-height: 28px;
+          text-align: center;
+          color: #D0D6F9;
+          font-weight: 400;
+          letter-spacing: 0px;        }   }
     }
-  }
+}
 }
 @media (max-width: $laptop-md) {
   .container-tech {
